--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-   configuration: ../conf.py
+   configuration: ./conf.py
 
 # Optionally build your docs in additional formats such as PDF
 formats:
@@ -17,4 +17,4 @@ formats:
 python:
    version: "3.8"
    install:
-   - requirements: ../requirements.txt
+   - requirements: ./requirements.txt
